--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 28 15:57:08 CEST 2017
-ndk.dir=C\:\\Users\\jojo-\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\jojo-\\AppData\\Local\\Android\\Sdk
+#Sun Oct 15 18:34:03 CEST 2017
+ndk.dir=C\:\\Android\\sdk\\ndk-bundle
+sdk.dir=C\:\\Android\\sdk
